--- a/styles/butttons.css
+++ b/styles/butttons.css
@@ -56,7 +56,7 @@
         content: "";
         position: absolute;
         border-radius: inherit;
-        inset: 1px;
+        inset: 0.09375rem;
         background-color: var(--bg-color);
 
     }
